[gd_scene load_steps=2 format=3 uid="uid://cs40qs01w3q2v"]

[ext_resource type="Script" path="res://scripts/ui/tower_ui_controller.gd" id="1_f8gfl"]

[node name="TowerUIController" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -993.0
offset_bottom = -336.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f8gfl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ContentBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TowerName" type="HBoxContainer" parent="MarginContainer/ContentBox"]
layout_mode = 2

[node name="TowerNameLabel" type="Label" parent="MarginContainer/ContentBox/TowerName"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tower Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseInfoButton" type="Button" parent="MarginContainer/ContentBox/TowerName"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
text = "x"
icon_alignment = 1

[node name="TowerMode" type="HBoxContainer" parent="MarginContainer/ContentBox"]
layout_mode = 2

[node name="TowerModeLeftButton" type="Button" parent="MarginContainer/ContentBox/TowerMode"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
text = "<"

[node name="TowerModeLabel" type="Label" parent="MarginContainer/ContentBox/TowerMode"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tower Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TowerModeRightButton" type="Button" parent="MarginContainer/ContentBox/TowerMode"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
text = ">"

[node name="ToggleTowerRangeButton" type="Button" parent="MarginContainer/ContentBox"]
layout_mode = 2
text = "show tower range"

[connection signal="pressed" from="MarginContainer/ContentBox/TowerName/CloseInfoButton" to="." method="_on_close_info_button_pressed"]
[connection signal="pressed" from="MarginContainer/ContentBox/TowerMode/TowerModeLeftButton" to="." method="_on_tower_mode_left_button_pressed"]
[connection signal="pressed" from="MarginContainer/ContentBox/TowerMode/TowerModeRightButton" to="." method="_on_tower_mode_right_button_pressed"]
[connection signal="pressed" from="MarginContainer/ContentBox/ToggleTowerRangeButton" to="." method="_on_toggle_tower_range_button_pressed"]
